# gliquid_python

./: .gitignore  LICENSE  README.md  adjustment_demo.ipynb  fitting_demo.ipynb  hsx.py  load_binary_data.py  pyproject.toml  requirements.txt
data/: Ag-V.json  Al-C.json  Al-Cu.json  B-Dy.json  C-Fe.json  C-Nb.json  C-Ni.json  C-Si.json  CGaFeNiSi_fitted_data.json  Ce-Ir.json  Cr-Eu.json  Cu-Mg.json  Fe-Ga.json  Fe-Ni.json  Fe-Si.json  Ga-Ni.json  Ga-Si.json  Nb-Ti.json  Ni-Si.json  fusion_enthalpies.json  fusion_temperatures.json  vaporization_temperatures.json
gliquid/: pyproject.toml  setup.py
gliquid/gliquid/: gliquid_binary.py  hsx.py  load_binary_data.py
notebooks/: adjustment_demo.ipynb  fitting_demo.ipynb
scripts/: CGaFeNiSi.py  Fit_Binary_Systems.py  NiFeGaC.py  fit_binaries.py
scripts/ternary_interpolation/: CGaFeNiSi.py  exec_tern_batch.py  exec_tern_single.py  extensive_hull_main.py  gliqman_ternbatch.py  ternary_HSX.py  zrte_trial.py
src/: gliquid_binary.py  hsx.py  load_binary_data.py
src/gliquid/: __init__.py  binary.py  config.py  load_binary_data.py
