[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gliquid"
version = "2025.06.30"
dependencies = [
    "plotly>=5.18.0,<6.0.0",
    "nbformat>=4.2.0",
    "mp-api>=0.45.1",
    "jupyter>=1.1.1"
]
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Joshua Willwerth", email = "willwerj@umich.edu"},
    {name = "Abrar Rauf", email = "arauf@umich.edu"},
    {name = "Shibo Tan", email = "shibot@umich.edu"},
    {name = "Wenhao Sun", email = "whsun@umich.edu"}
]
maintainers = [
    {name = "Joshua Willwerth", email = "willwerj@umich.edu"}
]
description = "A package for fitting DFT-referenced liquid free energies from digitized equilibrium phase boundaries"
readme = "README.md"
license = "MIT"
keywords = [
    "Density Functional Theory (DFT)",
    "Thermodynamic Modeling",
    "Equilibrium",
    "Liquidus",
    "Solution Phase",
    "Intermetallic Phase",
    "Materials Project (MP)",
    "Materials Platform for Data Science (MPDS)"
]
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://viz.whsunresearch.group/gliquid/interactive_matrix.html"
Repository = "https://github.com/willwerj/gliquid_python"